fix alignment of service image on mobile viewport

--- a/ml_project_V1.2/css/internalpages.css
+++ b/ml_project_V1.2/css/internalpages.css
@@ -1263,7 +1263,8 @@ font-size: 3.5rem;
   .banner-text-wrapper .text-container {top: 8.5vh; left: 5px; margin-bottom: 0;}
 
   .banner-text-wrapper .breadcrumb li.active,
-  .banner-text-wrapper .breadcrumb li a {font-size: 14px; line-height: 26px;}
+  .banner-text-wrapper .breadcrumb li a,
+  .banner-text-wrapper .breadcrumb-item+.breadcrumb-item::before {font-size: 14px; line-height: 26px;}
 
   .banner-text-wrapper .text-container p {font-size: 2.5vw;}
 
@@ -1286,8 +1287,8 @@ font-size: 3.5rem;
   .services-wrapper .icon-wrapper .services-icon-small {
     width: 30%;
     height: 32px;
-    top: 12%;
-    left: 25vh;
+    top: 13%;
+    left: 22vh;
   }
 
   .service-card .drive-your-business-text {
